--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>pod-request-access-landing-page</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <div id="app"></div>
 </body>
 </html>
